@@ -118,12 +118,8 @@ testBug(void)
   ASSERT(tand1(0) == 43);
   ASSERT(tand0(1) == 43);
   ASSERT(tand0(0) == 43);
-#if !defined(SDCC_hc08)
   ASSERT(txor1(1) == 43);
   ASSERT(txor1(0) == 42);
-#else
-#warning xor disabled.
-#endif
   ASSERT(txor0(1) == 42);
   ASSERT(txor0(0) == 43);
 
